<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:layout_marginBottom="70dp"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <!-- User Icon -->
        <ImageView
            android:id="@+id/imgUser"
            android:scaleY="2"
            android:scaleX="2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@mipmap/ic_launcher"
            android:scaleType="centerInside"
            android:layout_marginTop="40dp"
            android:contentDescription="User Icon" />

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:textColorHint="@color/placeholder_color"
            app:boxStrokeColor="@android:color/holo_red_light"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/rounded_text_field"
            android:fontFamily="sans-serif-medium"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/edit_text_color"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordWrapper"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/placeholder_color"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            app:boxStrokeColor="@android:color/holo_red_light"
            app:passwordToggleEnabled="true"
            app:boxCornerRadiusTopStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusBottomEnd="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-medium"
            android:background="@drawable/rounded_text_field"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/edit_text_color"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Login Button -->
        <com.google.android.material.button.MaterialButton

            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="24dp"
            android:textSize="16sp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            app:cornerRadius="20dp"
            app:strokeWidth="1dp"
            app:backgroundTint="@null"
            android:enabled="false"
            android:background="@drawable/rounded_button"
            android:textColor="@color/button_text_color"
            app:strokeColor="@color/edit_text_color" />

    </LinearLayout>
</ScrollView>

    <!-- Sign Up link -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/do_not_have_an_account"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:clickable="true"
            android:focusable="true"
            android:linksClickable="true"
            android:text="@string/sign_up"
            android:textColor="@android:color/holo_blue_light"
            android:textStyle="bold"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>