<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        android:layout_marginBottom="70dp"
        android:background="@color/background_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:layout_gravity="right"
                android:padding="3dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/red_color"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/button_enable_color"
                android:textStyle="bold"
                android:textSize="22sp"/>

            <!-- User Icon -->
            <ImageView
                android:id="@+id/imgUser"
                android:scaleY="2"
                android:scaleX="2"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@mipmap/ic_launcher_round"
                android:scaleType="centerInside"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="70dp"
                android:contentDescription="User Icon" />

            <!-- First Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/FirstNameWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:boxStrokeColor="@android:color/holo_red_light"
                android:background="@drawable/rounded_text_field"
                android:textColorHint="@color/placeholder_color"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/firstNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:textColor="@color/edit_text_color"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Last Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/LastNameWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@android:color/holo_red_light"
                android:background="@drawable/rounded_text_field"
                android:textColorHint="@color/placeholder_color"
                android:layout_marginTop="20dp"
                android:hint="@string/last_name"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastNameText"
                    android:layout_width="match_parent"
                    android:editable="false"
                    android:enabled="false"
                    android:layout_height="wrap_content"
                    android:textColor="@color/edit_text_color"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailWrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:textColorHint="@color/placeholder_color"
                app:boxStrokeColor="@android:color/holo_red_light"
                app:boxCornerRadiusTopStart="30dp"
                app:boxCornerRadiusTopEnd="30dp"
                app:boxCornerRadiusBottomStart="30dp"
                app:boxCornerRadiusBottomEnd="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/rounded_text_field"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:enabled="false"
                    android:textColor="@color/edit_text_color"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>




        </LinearLayout>
    </ScrollView>


</RelativeLayout>